@@ -1,3 +1,13 @@
+2010-06-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR bootstrap/44426
+	* sel-sched-dump.h (sel_prepare_string_for_dot_label): Remove
+	prototype.
+	(sel_print_to_dot): Remove macro.
+	(sel_print): Likewise.  New prototype.
+	* sel-sched-dump.c (sel_prepare_string_for_dot_label): Make static.
+	(sel_print): New function.
+
 2010-06-20  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	Backport from mainline:
